[gd_scene load_steps=12 format=3 uid="uid://b3llxpelm4eeb"]

[ext_resource type="Script" path="res://ship/scripts/ship.gd" id="1_7j38c"]
[ext_resource type="Texture2D" uid="uid://dlvlwlenm6m4m" path="res://ART/other/ship.png" id="1_u2c3h"]
[ext_resource type="Texture2D" uid="uid://ba7labpb65ae8" path="res://ART/other/shipHP.png" id="3_7r2lq"]
[ext_resource type="PackedScene" uid="uid://bmgfqitc8mwi7" path="res://ship/scenes/ship_damage_label.tscn" id="4_3sbuh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_860hp"]
atlas = ExtResource("1_u2c3h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iamm"]
atlas = ExtResource("1_u2c3h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8fem"]
atlas = ExtResource("1_u2c3h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro1jo"]
atlas = ExtResource("1_u2c3h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5enuc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_860hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iamm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8fem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro1jo")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kc7tr"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_0ucwj"]
b = Vector2(419, 0)

[node name="ship" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_7j38c")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 10)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_5enuc")
autoplay = "default"
frame_progress = 0.942874

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kc7tr")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_0ucwj")

[node name="redrawTargets" type="Timer" parent="."]
autostart = true

[node name="hp" type="Node2D" parent="."]

[node name="hpbar" type="TextureProgressBar" parent="hp"]
offset_left = -47.0
offset_top = -38.0
offset_right = -7.0
offset_bottom = -37.0
scale = Vector2(2.325, 5.5)
value = 100.0
texture_progress = ExtResource("3_7r2lq")

[node name="shipDamageLabel" parent="hp" instance=ExtResource("4_3sbuh")]

[node name="parasiteParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 70
lifetime = 0.25
one_shot = true
explosiveness = 1.0
randomness = 0.77
lifetime_randomness = 0.77
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 383.84
initial_velocity_max = 595.96
scale_amount_min = 8.0
scale_amount_max = 8.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="redrawTargets" to="." method="_on_redraw_targets_timeout"]
